# cicaddy-action

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SHARED_TASK_NOTES.md  action.yml  entrypoint.sh  pyproject.toml
.agents/skills/cicaddy-action/: SKILL.md
.claude/skills/cicaddy-action/: SKILL.md
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  pr-review.yml  release.yml
docs/: configuration.md  cron-jobs.md  delegation.md  development.md  env-file-preparation.md  prompt-engineering-best-practices.md  providers.md
src/cicaddy_github/: __init__.py  plugin.py  validation.py
src/cicaddy_github/config/: settings.py
src/cicaddy_github/github_integration/: agents.py  analyzer.py  dep_review_tools.py  detector.py  go_dep_review_tools.py  tools.py
src/cicaddy_github/security/: leak_detector.py
tasks/: changelog_report.yml  dep_impact_review.yml  go_dep_impact_review.yml  pr_review.yml
templates/: report_template.html
tests/: conftest.py
tests/unit/: test_agents.py  test_analyzer.py  test_dep_review.py  test_detector.py  test_go_dep_review.py  test_leak_detector.py  test_plugin.py  test_review_delegation_hooks.py  test_settings.py  test_tools.py
